[package]
name = "x2ssh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
fast-socks5 = "1.0.0"
russh = "0.57.0"
shell-escape = "0.1.5"
tokio = { version = "1.45.1", features = [
    "fs",
    "io-std",
    "rt-multi-thread",
    "time",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
