[package]
name = "proto"
version = "0.1.0"
edition = "2024"
authors = ["Artem Tokarev <tokarev28.art@gmail.com>"]
license = "MIT"
description = "Shared protocol code for x2ssh"
repository = "https://github.com/tokarevart/x2ssh"

[dependencies]
tokio = { version = "1.45.1", features = ["io-util"] }
anyhow = "1.0.98"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["rt", "macros"] }
