[package]
name = "x2ssh"
version = "0.1.0"
edition = "2024"
authors = ["Artem Tokarev <tokarev28.art@gmail.com>"]
license = "MIT"
description = "SOCKS5 proxy and VPN tunnel using SSH as transport"
readme = "../README.md"
repository = "https://github.com/tokarevart/x2ssh"
keywords = ["ssh", "socks5", "proxy", "vpn", "tunnel"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
anyhow = "1.0.98"
bytes = "1.10"
clap = { version = "4.5.40", features = ["derive"] }
fast-socks5 = "1.0.0"
ipnet = "2.11"
proto = { path = "../proto" }
russh = "0.57.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.45.1", features = [
    "fs",
    "io-std",
    "io-util",
    "net",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
toml = "1.0.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tun-rs = { version = "2.8", features = ["async"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
rtnetlink = "0.17"

[dev-dependencies]
tempfile = "3.25.0"

